Fixing bugs with Tracklist track addition/deletion, auth redirect, css extra margins

--- a/jammming/src/components/App/App.css
+++ b/jammming/src/components/App/App.css
@@ -15,6 +15,8 @@ h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.88rem;
   color: #fff;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
 }
 
 h1 .highlight {
