--- a/jammming/src/index.css
+++ b/jammming/src/index.css
@@ -59,6 +59,7 @@ body,
 html,
 #root {
   height: 100%;
+  margin: 0;
 }
 
 html {
